Wed Jun 22 14:59:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_postlist.cc,backends/brass/brass_postlist.h,
	  backends/chert/chert_postlist.cc,backends/chert/chert_postlist.h:
	  Reduce size of BrassPostList/ChertPostList objects by moving bool
	  members together (168->160 bytes for ChertPostList on x86-64 Linux).

Wed Jun 22 14:20:48 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/internaltest.cc: Fix typo in comment and verbose output.

Wed Jun 22 14:18:31 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/pretty.h: Fix comment typo.

Wed Jun 22 14:17:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony,
	  queryparser/termgenerator_internal.cc: Fix warning from GCC 3.3.

Wed Jun 22 13:34:14 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/,expand/ortermlist.cc,include/xapian/: Use TermIterator() instead
	  of TermIterator(NULL), and similarly for other Xapian iterator
	  classes.

Wed Jun 22 12:49:25 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/perftest/Makefile.mk: Make sure that perftest isn't run with
	  libeatmydata preloaded.

Wed Jun 22 12:45:54 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Remove duplicate entry added in most recent
	  backport and fix tab to spaces.

Wed Jun 22 12:35:57 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/deprecation.rst: Add flush() -> commit().

Wed Jun 22 12:27:37 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* README: Note licence is GPL *2+*.  Say "SVN/git".  Use trac URL for
	  wiki.

Wed Jun 22 12:22:42 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* net/remoteserver.cc: Remove unnecessary call to reopen() - either we
	  just called it or we're a writable database and it doesn't do